packages/svelte/tests/compiler-errors/samples/runes-wrong-effect-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-rune-args-length',
		message: '$effect can only be called with 1 argument'
	}
});
